# minimum_working_examples

./: .gitignore  LICENSE  README.md
fenicsx/basix_generated_values_p2_q3/: form.ufl  main.cpp  precompute_jacobian_3d.hpp  stiffness_operator_basix_table.hpp  stiffness_operator_ffc_table.hpp
fenicsx/basix_generated_values_p3_q4/: CMakeLists.txt  README.md  form.ufl  main.cpp  precompute_jacobian_3d.hpp  stiffness_operator_basix_table.hpp  stiffness_operator_ffc_table.hpp
